<resources>
    <string name="app_name">SmartPantryManager</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="qty_2_0_kg">Qty: 2.0 kg</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="ingredients_flour_sugar_eggs">Ingredients: Flour, Sugar, Eggs</string>
    <string name="instructions_step_by_step">Instructions step by step...</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="ingredient_name_e_g_milk">Ingredient Name (e.g. Milk)</string>
    <string name="quantity_e_g_1_5">Quantity (e.g. 1.5)</string>
    <string name="unit_e_g_kg_l_pcs">Unit (e.g. kg, L, pcs)</string>
    <string name="save_ingredient">Save Ingredient</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipes">Recipes</string>
    <string name="add">+ Add</string>
    <string name="step_by_step_instructions">Step-by-step instructions...</string>
    <string name="back_to_pantry">Back to Pantry</string>
    <string name="instructions">Instructions</string>
    <string name="list_of_ingredients">List of ingredients...</string>
    <string name="required_ingredients">Required Ingredients</string>
    <string name="no_suggested_recipes_found_based_on_your_pantry_ingredients">No suggested recipes found based on your pantry ingredients.</string>
    <string name="recipes_you_can_make_with_your_available_ingredients">Recipes you can make with your available ingredients:</string>
    <string name="suggested_recipes">Suggested Recipes</string>
    <string name="settings">Settings</string>
    <string name="suggested">Suggested</string>
    <string name="pantry">Pantry</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="e_g_flour">e.g. Flour</string>
    <string name="quantity">Quantity</string>
    <string name="e_g_1_5">e.g. 1.5</string>
    <string name="unit">Unit</string>
    <string name="e_g_kg_pcs_l">e.g. kg, pcs, L</string>
    <string name="save_changes">Save Changes</string>
</resources>